FIx-CSS-NavBar-Menu-user-Mobile-App - Fixed layout in the mobile version 320px - Fixed NavBar App - Add .gitattributes for config crlf => lf - Fix one|two row banner animation mobile screen

--- a/src/components/banner-card/banner-card.less
+++ b/src/components/banner-card/banner-card.less
@@ -135,6 +135,7 @@
 
 .banner-card-picture-container{
   position: relative;
+  display: flex;
 
   .offline-overlay{
     font-size: 24px;
